<resources>
    <string name="app_name">TimeTracker</string>
    <string name="menu_day">Day</string>
    <string name="menu_week">Week</string>
    <string name="menu_edit">Edit</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete:</string>
    <string name="please_report_a_bug">*** Please, report a bug ***</string>
    <string name="delCancel">Cancel</string>
    <string name="delDelete">Delete</string>
    <string name="show">👁 \uD83D\uDC41 Show</string>
    <string name="delete">🗑 \uD83D\uDC41 Del</string>
    <string name="email">✉ EMail</string>
</resources>