<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_day" />
    <item
        android:id="@+id/menu_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_week" />
    <item
        android:id="@+id/menu_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/menu_edit" />
    <item
        android:id="@+id/menu_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="List" />
</menu>